--- a/three/assets/css/style3.css
+++ b/three/assets/css/style3.css
@@ -4,19 +4,53 @@
 
 body {
   font-family: Helvetica,bold;
-  font-size: 15px;
+  font-size: 10px;
+  color:black;
   line-height: normal;
   background-color: #e3e6e7;
-  margin-left: 120px;
+  margin-left: 300px;
+  opacity: 1;
+  transition: 1s;
 }
 
+body.fade-out {
+    opacity: 0;
+    transition: none;
+}
+
+/*----------------------------------*/
+
 .fixed{
-  font-size: 150px;
+  font-size: 8vh;
   color: orange;
   position: fixed;
   top:1vh;
   left:3vh;
 }
+
+
+
+.title{
+  font-family:arial;
+  color: orange;
+  position: fixed;
+  top:1vh;
+  left:3vh;
+  margin-left:150px;
+  font-size:70px;
+}
+
+.hidden{
+  visibility: hidden;
+}
+/*effects*/
+
+img:hover {
+  width: 10%;
+  transition: 2s;
+}
+
+/*----------------------------------*/
 
 .navi{
   position: fixed;
@@ -37,7 +71,7 @@ body {
 }
 
 .align__bottom{
-  lign-items:center;
+  align-items:flex-end;
 }
 
 .col__1of3{
@@ -48,16 +82,21 @@ body {
   flex:0 0 66.666%;
 }
 
+.col__3of3{
+  flex:0 0 25%;
+}
+
 .content{
-  padding:10px;
-  margin:10px;
+  padding:5px;
+  margin:5px;
 }
 
 .content img{
   width:100%;
 }
+/*----------------------------------*/
 
-.title{
-  margin-left:100px;
-  font-size:48px;
+::selection {
+  background: white;
+  /* WebKit/Blink Browsers */
 }
