font css update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial;
+  font-family: 'Raleway', sans-serif;
   font-size: 30px;
   line-height: normal;
   background-color: #dd8f3e;
