--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
   line-height: normal;
-  background-color: #dd8f3e;
+  background-color: #dddddd;
   margin:2vh;
   opacity:1;
   transition: 1s;
